--- a/telegraf/snmp.conf
+++ b/telegraf/snmp.conf
@@ -7,80 +7,80 @@
 
 # Tunnel statistics
 [[inputs.snmp.field]]
-     name = "vmwTunnelNumDevices"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelNumDevices"
+     name = "omnTunnelNumDevices"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNumDevices"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelNumDevicesPeak"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelNumDevicesPeak"
+     name = "omnTunnelNumDevicesPeak"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNumDevicesPeak"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelNumConnections"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelNumConnections"
+     name = "omnTunnelNumConnections"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNumConnections"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelNumConnectionsPeak"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelNumConnectionsPeak"
+     name = "omnTunnelNumConnectionsPeak"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNumConnectionsPeak"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelDownstreamBitRate"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelDownstreamBitRate"
+     name = "omnTunnelDownstreamBitRate"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelDownstreamBitRate"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelUpstreamBitRate"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelUpstreamBitRate"
+     name = "omnTunnelUpstreamBitRate"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelUpstreamBitRate"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelNumProxies"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelNumProxies"
+     name = "omnTunnelNumProxies"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNumProxies"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelNumProxiesDown"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelNumProxiesDown"
+     name = "omnTunnelNumProxiesDown"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNumProxiesDown"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelNumTrafficRules"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelNumTrafficRules"
+     name = "omnTunnelNumTrafficRules"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNumTrafficRules"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelNumClosedHandshakes"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelNumClosedHandshakes"
+     name = "omnTunnelNumClosedHandshakes"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNumClosedHandshakes"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelNumClosedHandshakes"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelNumClosedHandshakes"
+     name = "omnTunnelNumClosedHandshakes"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNumClosedHandshakes"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelNumFailedHandshakes"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelNumFailedHandshakes"
+     name = "omnTunnelNumFailedHandshakes"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNumFailedHandshakes"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelNumDevicesSinceStart"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelNumDevicesSinceStart"
+     name = "omnTunnelNumDevicesSinceStart"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNumDevicesSinceStart"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelAPIConnectivity"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelAPIConnectivity"
+     name = "omnTunnelAPIConnectivity"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelAPIConnectivity"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelAWCMConnectivity"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelAWCMConnectivity"
+     name = "omnTunnelAWCMConnectivity"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelAWCMConnectivity"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelCascadeMode"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelCascadeMode"
+     name = "omnTunnelCascadeMode"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelCascadeMode"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelTrafficRulesEnabled"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelTrafficRulesEnabled"
+     name = "omnTunnelTrafficRulesEnabled"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelTrafficRulesEnabled"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelFIPSEnabled"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelFIPSEnabled"
+     name = "omnTunnelFIPSEnabled"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelFIPSEnabled"
 
 [[inputs.snmp.field]]
-     name = "vmwTunnelNSXEnabled"
-     oid  = "VMWARE-TUNNEL-SERVER-MIB::vmwTunnelNSXEnabled"
+     name = "omnTunnelNSXEnabled"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNSXEnabled"
 
 # CPU Specific metrics
    [[inputs.snmp.field]]
