--- a/telegraf/snmp.conf
+++ b/telegraf/snmp.conf
@@ -82,6 +82,38 @@
      name = "omnTunnelNSXEnabled"
      oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNSXEnabled"
 
+[[inputs.snmp.field]]
+     name = "omnTunnelNumDevicesBlockedByZTNA"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNumDevicesBlockedByZTNA"
+
+[[inputs.snmp.field]]
+     name = "omnTunnelNumDDoSRejected"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNumDDoSRejected"
+
+[[inputs.snmp.field]]
+     name = "omnTunnelNumConnSuccessful"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNumConnSuccessful"
+
+[[inputs.snmp.field]]
+     name = "omnTunnelNumConnFailed"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNumConnFailed"
+
+[[inputs.snmp.field]]
+     name = "omnTunnelNumConnBlockedByZTNA"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelNumConnBlockedByZTNA"
+
+[[inputs.snmp.field]]
+     name = "omnTunnelMemoryVirtual"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelMemoryVirtual"
+
+[[inputs.snmp.field]]
+     name = "omnTunnelMemoryResident"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelMemoryResident"
+
+[[inputs.snmp.field]]
+     name = "omnTunnelMemoryShared"
+     oid  = "OMN-TUNNEL-SERVER-MIB::omnTunnelMemoryShared"
+
 # CPU Specific metrics
    [[inputs.snmp.field]]
      name = "sscpuMinLoad"
