--- a/.env
+++ b/.env
@@ -16,5 +16,5 @@ GRAFANA_PASSWORD=admin
 GRAFANA_PLUGINS_ENABLED=true
 GRAFANA_PLUGINS=grafana-piechart-panel
 
-# Define as "udp://<hostname_or_ip1>:161,udp://<hostname_or_ip2>:161,udp://<hostname_or_ip3>:161"
+# Define as "'udp://<hostname_or_ip1>:161','udp://<hostname_or_ip2>:161','udp://<hostname_or_ip3>:161'"
 SNMP_SERVERS=<TUNNEL SERVER IPS IN ABOVE FORMAT>
